<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="320dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <NumberPicker
        android:id="@+id/np_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/np_selector"
        android:text="@string/notification_age"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:text="@string/notification_cancel"
        android:textColor="@color/color_text_gray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="96dp"
        android:background="@android:color/transparent"
        android:text="@string/notification_sure"
        android:textColor="@color/color_text_black"
        android:textSize="18sp" />


</RelativeLayout>