<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daiyiming.lifecountdown.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/color_bg_gray2"
            android:gravity="center">

            <View
                android:layout_width="294dp"
                android:layout_height="72dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:background="@color/color_bg_shadow"/>

            <include layout="@layout/appwidget_provider_main" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/notification_birthday"
                android:textColor="@color/color_text_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:gravity="right"
                android:textColor="@color/color_text_black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/notification_anim"
                android:textColor="@color/color_text_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_anim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:gravity="right"
                android:inputType="number"
                android:textColor="@color/color_text_black"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_motto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:hint="@string/notification_motto"
            android:textColor="@color/color_text_black"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
